the first commit to github